--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "ne_sop",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/sitn/ne_sop#readme",
   "dependencies": {
     "quasar": "^2.12.5",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
-  "devDependencies" : {
-    "vite": "^4.4.9",
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.3.1",
+    "vite": "^4.4.9"
   }
 }
