--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sitn/ne_sop#readme",
   "dependencies": {
+    "libphonenumber-js": "^1.10.44",
     "quasar": "^2.12.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
