--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.5.0",
     "@vitejs/plugin-vue": "^4.3.1",
     "vite": "^4.4.9"
   }
