--- a/back/.gitignore
+++ b/back/.gitignore
@@ -6,6 +6,7 @@ ne_sop_backend/db.sqlite3
 ne_sop_backend/ne_sop_api/__pycache__/
 ne_sop_backend/ne_sop_api/tests.py
 ne_sop_backend/ne_sop_backend/__pycache__/
+ne_sop_backend/static
 
 # environment file
 .env
