--- a/back/.env.template
+++ b/back/.env.template
@@ -1,6 +1,6 @@
 # APPLICATION SECRET KEY
 NESOP_SECRET_KEY=
-ALLOWED_HOSTS=example.com,example.ch
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 # PATHS
 NESOP_OP_PATH=
