local dev username

--- a/back/.env.template
+++ b/back/.env.template
@@ -1,7 +1,11 @@
 # APPLICATION SECRET KEY
 NESOP_SECRET_KEY=
 ALLOWED_HOSTS=localhost,127.0.0.1
+
+# In production, this should be False
 DEBUG=False
+# In production, this should be empty
+LOCAL_DEBUG_USER=
 
 # PATHS
 NESOP_OP_PATH=
