--- a/back/.env.template
+++ b/back/.env.template
@@ -1,6 +1,9 @@
 # APPLICATION SECRET KEY
 NESOP_SECRET_KEY=
+# Your backend host, without port
 ALLOWED_HOSTS=localhost,127.0.0.1
+# Your frontend Origin, with port if used in browser
+CORS_ALLOWED_ORIGINS=http://127.0.0.1:5173
 
 # In production, this should be False
 DEBUG=False
