--- a/back/.env.template
+++ b/back/.env.template
@@ -19,3 +19,12 @@ NESOP_DATABASE_SERVER=
 NESOP_DATABASE_NAME=
 NESOP_DATABASE_USER=
 NESOP_DATABASE_PASSWORD=
+
+# EMAIL
+NESOP_EMAIL_HOST=
+
+# BASE FRONT URL
+FRONT_URL=
+
+# PARAMETRES
+NESOP_TEMPLATE_AUTRE_ID=
