added NESOP_SECRET_UUID variable

--- a/back/.env.template
+++ b/back/.env.template
@@ -1,5 +1,7 @@
 # APPLICATION SECRET KEY
 NESOP_SECRET_KEY=
+NESOP_SECRET_UUID=
+
 # Your backend host, without port
 ALLOWED_HOSTS=localhost,127.0.0.1
 # Your frontend Origin, with port if used in browser
