Added VITE_WEBMASTER_EMAIL variable to env file templates

--- a/front/.env.development
+++ b/front/.env.development
@@ -2,3 +2,4 @@ VITE_API_URL="http://127.0.0.1:8000"
 VITE_CLIENT_URL="http://localhost:5173/web/sop/#/"
 VITE_BASE_PATH="/web/sop/"
 VITE_DEV=true
+VITE_WEBMASTER_EMAIL="sitn@ne.ch"
